# Sign-and-Magnitude-Game

./: README.md  __main__.pyw  pyproject.toml  setup.cfg
Sign-and-Magnitude-Game/: __init__.py
