[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Sign-and-Magnitude-Game"
authors = [{name = "Joe Greaves", email = "joegreaves@outlook.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License","Programming Language :: Python :: 3","Operating System :: OS Independent"]
requires-python = "~=3.7"
dynamic = ["version", "description"]
dependencies = [
    "pygame"
]

[project.urls]
Home = "https://github.com/joegreaves17/sign-and-magnitude-game"