[metadata]
name = Sign and Magnitude Game
version = 1.0.0
author = Joe Greaves
author_email = joegreaves@outlook.com
description = Test yourself on converting denary numbers to sign and magnitude binary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joegreaves17/sign-and-magnitude-game
project_urls =
    Bug Tracker = https://github.com/joegreaves17/sign-and-magnitude-game/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = __main__
python_requires = >=3.6
install_requires =
	pygame

[options.entry_points]
gui_scripts =
    signmagnitudegame = __main__:main